--- a/roles/Proxmox-VM-Action/tasks/main.yml
+++ b/roles/Proxmox-VM-Action/tasks/main.yml
@@ -9,25 +9,39 @@
 
 # ============================================= Action =============================================
 
+# - name: Start VM
+#   community.general.proxmox_kvm:
+#     api_user: "{{ proxmox_user }}"
+#     api_token_id: "{{ proxmox_token_id }}"
+#     api_token_secret: "{{ proxmox_token }}"
+#     api_host: "{{ proxmox_host_1 }}"
+#     name: "{{ item }}"
+#     state: "{{ vm_action }}"
+#     timeout: 300
+#   with_items:
+#      - K8s1-RHEL-Master1
+#      - K8s1-RHEL-Master2
+#      - K8s1-RHEL-Master3
+#      - K8s1-RHEL-Worker1
+#      - K8s1-RHEL-Worker2
+#      - K8s1-RHEL-Worker3
+#      - K8s1-RHEL-Worker4
+#      - K8s1-RHEL-Storage1
+#      - K8s1-RHEL-Storage2
+#      - K8s1-RHEL-Storage3
+#      - K8s1-RHEL-Storage4
+
 - name: Start VM
   community.general.proxmox_kvm:
     api_user: "{{ proxmox_user }}"
     api_token_id: "{{ proxmox_token_id }}"
     api_token_secret: "{{ proxmox_token }}"
-    api_host: "{{ proxmox_host }}"
+    api_host: "{{ proxmox_host_2 }}"
     name: "{{ item }}"
     state: "{{ vm_action }}"
     timeout: 300
   with_items:
-     - K8s1-RHEL-Master1
-     - K8s1-RHEL-Master2
-     - K8s1-RHEL-Master3
-     - K8s1-RHEL-Worker1
-     - K8s1-RHEL-Worker2
-     - K8s1-RHEL-Worker3
-     - K8s1-RHEL-Worker4
      - K8s1-RHEL-Storage1
      - K8s1-RHEL-Storage2
      - K8s1-RHEL-Storage3
      - K8s1-RHEL-Storage4
-
