--- a/inventory/graylog-ubuntu.ini
+++ b/inventory/graylog-ubuntu.ini
@@ -1,4 +1,4 @@
-[grl_ubuntu]
+[graylog_ubuntu]
 #graylogcluster1         ansible_host=192.168.2.47
 #graylogcluster2         ansible_host=192.168.2.48
 #graylogcluster3         ansible_host=192.168.2.49
