--- a/inventory/k8s1-rhel.ini
+++ b/inventory/k8s1-rhel.ini
@@ -1,4 +1,4 @@
-[k8s1_rhel]
+[k8s1_rhel_cluster]
 k8s1-rhel-master1 ansible_host=192.168.2.211
 k8s1-rhel-master2 ansible_host=192.168.2.212
 k8s1-rhel-master3 ansible_host=192.168.2.213
