--- a/inventory/jenkins.ini
+++ b/inventory/jenkins.ini
@@ -1,4 +1,4 @@
-[all]
+[jenkins]
 
 jenkins_master                  ansible_host=192.168.2.50
 jenkins-node1                   ansible_host=192.168.2.51
