--- a/inventory/graylog-ubuntu.ini
+++ b/inventory/graylog-ubuntu.ini
@@ -1,5 +1,7 @@
 [graylog_ubuntu]
-#graylogcluster1         ansible_host=192.168.2.47
-#graylogcluster2         ansible_host=192.168.2.48
-#graylogcluster3         ansible_host=192.168.2.49
-graylogclusterlb1       ansible_host=192.168.2.123
+
+graylog                 ansible_host=192.168.2.42
+graylogclusterlb1       ansible_host=192.168.2.46
+graylogcluster1         ansible_host=192.168.2.47
+graylogcluster2         ansible_host=192.168.2.48
+graylogcluster3         ansible_host=192.168.2.49
