Add proxy repo role

--- a/inventory/jenkins.ini
+++ b/inventory/jenkins.ini
@@ -1,5 +1,5 @@
 [jenkins]
 
-jenkins_master                  ansible_host=192.168.2.50
-jenkins-node1                   ansible_host=192.168.2.51
-jenkins_builder                 ansible_host=192.168.2.55
+jenkins-master                  ansible_host=192.168.2.27
+jenkins-builder                 ansible_host=192.168.2.28
+jenkins-node1                   ansible_host=192.168.2.29
