--- a/roles/ping/tasks/main.yml
+++ b/roles/ping/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 # tasks file for ping
 - name: Ping my servers
+  when: ansible_os_family == "RedHat" or ansible_os_family == "RED"
   become: true
   ansible.builtin.ping:
 
