--- a/roles/chrony/tasks/main.yml
+++ b/roles/chrony/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for chrony
 
 - name: Block for RedHat
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" or ansible_os_family == "RED"
   become: true
   block:
 
