--- a/inventory/k8s1-redos.ini
+++ b/inventory/k8s1-redos.ini
@@ -1,7 +1,7 @@
 [k8s1_redos]
 
-k8s1-redos-cpl01 ansible_host=192.168.2.111
-k8s1-redos-cpl02 ansible_host=192.168.2.112
-k8s1-redos-cpl03 ansible_host=192.168.2.113
-k8s1-redos-app01 ansible_host=192.168.2.114
-k8s1-redos-app02 ansible_host=192.168.2.115
+k8s1-redos-cpl01.fillswim.local ansible_host=192.168.2.111
+k8s1-redos-cpl02.fillswim.local ansible_host=192.168.2.112
+k8s1-redos-cpl03.fillswim.local ansible_host=192.168.2.113
+k8s1-redos-app01.fillswim.local ansible_host=192.168.2.114
+k8s1-redos-app02.fillswim.local ansible_host=192.168.2.115
