--- a/general.yaml
+++ b/general.yaml
@@ -7,6 +7,7 @@
   roles:
     - role: ping
     - role: ssh-keys
+    - role: passwordauthentication-no
     - role: sudoers
     - role: dns
     - role: chrony
