--- a/roles/dns/defaults/main.yml
+++ b/roles/dns/defaults/main.yml
@@ -2,8 +2,8 @@
 # defaults file for DNS
 
 # DNS серверы
-dns_nameservers:
-  - 192.168.2.11
-  - 192.168.2.12
+# dns_nameservers:
+#   - 192.168.2.11
+#   - 192.168.2.12
 
-dns_my_domen: fillswim.local
+# dns_my_domen: fillswim.local
