--- a/roles/ssh-keys/tasks/main.yml
+++ b/roles/ssh-keys/tasks/main.yml
@@ -3,6 +3,15 @@
 
 # ========================================== Add SSH keys ==========================================
 
+- name: Создать пустой файл authorized_keys для root
+  ansible.builtin.copy:
+    content: ""
+    dest: /root/.ssh/authorized_keys
+    force: true
+    group: root
+    owner: root
+    mode: "0600"
+
 - name: Добавление SSH ключа к пользователю root
   become: true
   ansible.posix.authorized_key:
@@ -10,8 +19,11 @@
     state: present
     key: "{{ item }}"
   with_file:
-    - /home/fill/.ssh/id_rsa.pub
-    - /home/fill/.ssh-others/id_rsa_mypc.pub
+    - /home/fill/.ssh/id_ed25519.pub
+    - /home/fill/.ssh-others/id_ed25519_dell.pub
+    - /home/fill/.ssh-others/id_ed25519-CT-WN-001221.pub
+    # - /home/fill/.ssh-others/id_ed25519-el_bembe.pub
+    # - /home/fill/.ssh-others/id_ed25519-sys-adm-1.pub
 
 # - name: Добавление SSH ключа к пользователю fill
 #   ansible.posix.authorized_key:
@@ -19,5 +31,6 @@
 #     state: present
 #     key: "{{ item }}"
 #   with_file:
-#     - /home/fill/.ssh/id_rsa.pub
-#     - /home/fill/.ssh-others/id_rsa_mypc.pub
+#     - /home/fill/.ssh/id_ed25519.pub
+#     - /home/fill/.ssh-others/id_ed25519_dell.pub
+#     - /home/fill/.ssh-others/id_ed25519-CT-WN-001221.pub
