--- a/general.yaml
+++ b/general.yaml
@@ -19,4 +19,4 @@
     - role: install
     - role: prometheus.prometheus.node_exporter
       when: "'k8s' not in inventory_hostname"
-    - role: reboot
+    # - role: reboot
