--- a/playbooks/Update_Jenkins.yml
+++ b/playbooks/Update_Jenkins.yml
@@ -1,9 +1,9 @@
 ---
 
-# ansible-playbook -i inventory/jenkins_servers.ini playbooks/Update_Jenkins.yml -b
+# ansible-playbook -i inventory/jenkins.ini playbooks/Update_Jenkins.yml -b
 
 - name: Update Jenkins
-  hosts: jenkins_master
+  hosts: jenkins-master
 
   vars:
     source_file: /usr/share/java/jenkins.war
@@ -23,7 +23,7 @@
     - name: Download jenkins.war
       become: true
       ansible.builtin.get_url:
-        url: https://updates.jenkins.io/download/war/2.426.2/jenkins.war
+        url: https://updates.jenkins.io/download/war/2.479.2/jenkins.war
         dest: "{{ source_file }}"
         mode: '0664'
         force: true
