Update role docker

--- a/roles/install-docker/defaults/main.yml
+++ b/roles/install-docker/defaults/main.yml
@@ -6,3 +6,4 @@ docker_gpg_link: "https://download.docker.com/linux/ubuntu/gpg"
 docker_repo_link: "https://download.docker.com/linux/ubuntu"
 docker_deb_url: "deb [arch={{ os_architecture }} signed-by={{ docker_gpg_path }}] {{ docker_repo_link }} {{ ansible_distribution_release }} stable"
 os_architecture: "amd64"
+docker_user: "{{ ansible_user }}"
