--- a/roles/ssh-keys/tasks/main.yml
+++ b/roles/ssh-keys/tasks/main.yml
@@ -18,19 +18,33 @@
     user: root
     state: present
     key: "{{ item }}"
-  with_file:
-    - /home/fill/.ssh/id_ed25519.pub
-    - /home/fill/.ssh-others/id_ed25519_dell.pub
-    - /home/fill/.ssh-others/id_ed25519-CT-WN-001221.pub
-    # - /home/fill/.ssh-others/id_ed25519-el_bembe.pub
-    # - /home/fill/.ssh-others/id_ed25519-sys-adm-1.pub
+  with_file: "{{ ssh_keys }}"
 
-# - name: Добавление SSH ключа к пользователю fill
-#   ansible.posix.authorized_key:
-#     user: fill
-#     state: present
-#     key: "{{ item }}"
-#   with_file:
-#     - /home/fill/.ssh/id_ed25519.pub
-#     - /home/fill/.ssh-others/id_ed25519_dell.pub
-#     - /home/fill/.ssh-others/id_ed25519-CT-WN-001221.pub
+- name: Добавление SSH ключа к пользователю ubuntu
+  when:
+    - ansible_distribution == "Ubuntu"
+    - "'openstack' in inventory_hostname"
+  ansible.posix.authorized_key:
+    user: ubuntu
+    state: present
+    key: "{{ item }}"
+  with_file: "{{ ssh_keys }}"
+
+- name: Добавление SSH ключа к пользователю stack
+  when:
+    - "'openstack' in inventory_hostname"
+  ansible.posix.authorized_key:
+    user: stack
+    state: present
+    key: "{{ item }}"
+  with_file: "{{ ssh_keys }}"
+
+- name: Добавление SSH ключа к пользователю cloud-user
+  when:
+    - ansible_distribution == "Rocky" or ansible_distribution == "OracleLinux"
+    - "'openstack' in inventory_hostname"
+  ansible.posix.authorized_key:
+    user: cloud-user
+    state: present
+    key: "{{ item }}"
+  with_file: "{{ ssh_keys }}"
