Refactor kolla-ansible-prepare role: uncomment roles in playbook, update task names for clarity, and enhance comments for better understanding.

--- a/kolla-ansible-prepare.yaml
+++ b/kolla-ansible-prepare.yaml
@@ -4,9 +4,9 @@
   hosts: "all"
 
   roles:
-    # - role: chrony
-    # - role: timezone
-    # - role: sudoers
-    # - role: ssh-keys
-    # - role: install-docker
+    - role: chrony
+    - role: timezone
+    - role: sudoers
+    - role: ssh-keys
+    - role: install-docker
     - role: kolla-ansible-prepare
