--- a/roles/ssh-keys/tasks/main.yml
+++ b/roles/ssh-keys/tasks/main.yml
@@ -23,7 +23,7 @@
 - name: Добавление SSH ключа к пользователю ubuntu
   when:
     - ansible_distribution == "Ubuntu"
-    - "'openstack' in inventory_hostname"
+    # - "'openstack' in inventory_hostname"
   ansible.posix.authorized_key:
     user: ubuntu
     state: present
