--- a/sandbox/install-opensearch-prod-ready/roles/create-folder-opensearch/tasks/main.yml
+++ b/sandbox/install-opensearch-prod-ready/roles/create-folder-opensearch/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 # =========================================================
-#                     Создание папки
+#              Создание папки для OpenSearch
 # =========================================================
 - name: Проверка существования папки "{{ create_folder_path }}"
   ansible.builtin.stat:
@@ -19,7 +19,7 @@
     - stat_output.stat.exists is false
 
 # =========================================================
-#                     Для OpenSearch
+#             Создание папок для data и logs
 # =========================================================
 - name: Создание папки "{{ create_folder_path }}/data"
   ansible.builtin.file:
