--- a/general.yaml
+++ b/general.yaml
@@ -19,8 +19,8 @@
       when: "'ntp' not in inventory_hostname"
     - role: timezone
     - role: install
-    - role: prometheus.prometheus.node_exporter
-      when: "'k8s' not in inventory_hostname"
+    # - role: prometheus.prometheus.node_exporter
+    #   when: "'k8s' not in inventory_hostname"
     # - role: install-promtail-agent
     #   when: "'k8s' not in inventory_hostname"
     - role: reboot
